Add Jackson jdk8 support in JacksonJsonPayloadConverter
Signed-off-by: Tihomir Surdilovic <tihomir@temporal.io>

--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect"
 
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8"
     implementation ("com.fasterxml.jackson.module:jackson-module-kotlin") {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
     }
