--- a/.github/workflows/native-images.yml
+++ b/.github/workflows/native-images.yml
@@ -83,21 +83,21 @@ jobs:
       - name: Rename dirs
         run: |
           version="$(sed 's/v//'<<<'${{ github.event.inputs.release }}')"
-          for dir in *; do mv "$dir" "temporal-test-server_$version_$dir"; done        
+          for dir in *; do mv "$dir" "temporal-test-server_${version}_${dir}"; done        
       
       - name: Tar (linux, macOS)
-        run: for dir in *{linux,macOS}*; do tar cvzf "$dir.tar.gz" "$dir"; done
+        run: for dir in *{linux,macOS}*; do tar cvzf "${dir}.tar.gz" "$dir"; done
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Zip (windows)
-        run: for dir in *windows*; do zip -r "$dir.zip" "$dir"; done
+        run: for dir in *windows*; do zip -r "${dir}.zip" "$dir"; done
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Upload
         run: |
             clobberflag="$([[ ${{ github.event.inputs.clobber }} = true ]] && echo "--clobber" || echo '')"
-            gh release upload $clobberflag --repo ${{ github.event.inputs.release_repo }} ${{ github.event.inputs.release }} *.zip *.tar.gz
+            gh release upload ${clobberflag} --repo ${{ github.event.inputs.release_repo }} ${{ github.event.inputs.release }} *.zip *.tar.gz
 
 
