--- a/.github/workflows/native-testserver-images.yml
+++ b/.github/workflows/native-testserver-images.yml
@@ -13,7 +13,7 @@ on:
         type: boolean
         description: 'Overwrite existing release artifacts'
         required: false
-        default: no
+        default: 'false'
 
 jobs:
   build:
