Prevent Windows 2022 being used for native-images
GraalVM doesn't have an SDK for Windows Server 2022 yet so the native
executable build fails if we catch an updated builder. Windows 2022 is
becoming the default for `windows-latest` "real soon now" so pin the
version in use to 2019.

More context at https://github.com/actions/virtual-environments/issues/4856

--- a/.github/workflows/native-testserver-images.yml
+++ b/.github/workflows/native-testserver-images.yml
@@ -27,7 +27,7 @@ jobs:
           - dist: macos-latest
             os_family: macOS
             arch: amd64
-          - dist: windows-latest
+          - dist: windows-2019
             os_family: windows
             arch: amd64
     runs-on: ${{ matrix.dist }}
