--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ ext {
     jacksonVersion = '[2.9.0,)!!2.13.1'
     tallyVersion = '[0.4.0,)!!0.11.1'
     gsonVersion = '[2.0,)!!2.8.9'
+    slf4jVersion = '[1.4.0,)!!1.7.35'
 }
 
 apply from: "$rootDir/gradle/versioning.gradle"
