--- a/temporal-test-server/build.gradle
+++ b/temporal-test-server/build.gradle
@@ -8,7 +8,7 @@ description = '''Temporal test workflow server'''
 
 dependencies {
     api project(':temporal-sdk')
-    implementation("io.grpc:grpc-core:$grpcVersion")
+    implementation("io.grpc:grpc-core")
     implementation "com.google.guava:guava:$guavaVersion"
     implementation group: 'com.cronutils', name: 'cron-utils', version: '9.1.6'
 }
