--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,22 @@ plugins {
 }
 
 ext {
+    // Platforms.
+    // We have to use specific versions with platforms until Maven 4.0.0 is released
+    // See https://github.com/temporalio/sdk-java/issues/1033
+    //
+    // grpcVersion = '[1.34.0,)!!1.44.0'
+    // jacksonVersion = '[2.9.0,)!!2.13.1'
+    // micrometerVersion = '[1.0.0,)!!1.8.2'
+    grpcVersion = '1.44.0'
+    jacksonVersion = '2.13.1'
+    micrometerVersion = '1.8.2'
+
     logbackVersion = '1.2.10'
-    grpcVersion = '[1.34.0,)!!1.44.0'
     protoVersion = '[3.10.0,)!!3.19.4'
     guavaVersion = '[10.0,)!!31.0.1-jre'
     jsonPathVersion = '2.7.0'
     mockitoVersion = '4.3.1'
-    micrometerVersion = '[1.0.0,)!!1.8.2'
-    jacksonVersion = '[2.9.0,)!!2.13.1'
     tallyVersion = '[0.4.0,)!!0.11.1'
     gsonVersion = '[2.0,)!!2.8.9'
     slf4jVersion = '[1.4.0,)!!1.7.35'
