--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -14,32 +14,56 @@ on:
         description: 'Git ref from which to release'
         required: true
         default: 'master'
+      do_build_native_images:
+        type: boolean
+        description: 'Native Test Server'
+        required: true
+        default: 'true'
+      do_publish_jars:
+        type: boolean
+        description: 'Publish Java Artifacts'
+        required: true
+        default: 'true'
 
 jobs:
-  draft_release:
+  create_draft_release:
     name: Create Github draft release
     runs-on: ubuntu-latest
     steps:
+      - name: Audit gh version
+        run: gh --version
+        
+      - name: Check for existing release
+        id: check_release
+        run: gh release view --repo '${{ github.repository }}' '${{ github.event.inputs.tag }}'
+        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Checkout repo
+        if: steps.check_release.outcome != 'success'
         uses: actions/checkout@v2
         with:
           ref: '${{ github.event.inputs.ref }}'
+        
       - name: Create release
+        if: steps.check_release.outcome != 'success'
         run: >
           gh release create
           '${{ github.event.inputs.tag }}'
           --draft
-          --repo '${{ github.repository }}' 
+          --repo '${{ github.repository }}'
           --title '${{ github.event.inputs.tag }}'
           --target '${{ github.event.inputs.ref }}'
           --notes-file 'releases/${{ github.event.inputs.tag }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-  gradle_publish:
-    name: Publish via Gradle
+  publish_java_artifacts:
+    name: Publish Java Artifacts
+    if: github.event.inputs.do_publish_jars == 'true'
     runs-on: ubuntu-latest
-    needs: draft_release 
+    needs: create_draft_release 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -90,9 +114,10 @@ jobs:
       - name: Publish
         run: ./gradlew publish
          
-  native_images:
+  build_native_images:
     name: Build native test server
-    needs: draft_release
+    needs: create_draft_release
+    if: github.event.inputs.do_build_native_images == 'true'
     strategy:
       matrix:
         include:
@@ -143,9 +168,11 @@ jobs:
           
   attach_to_release:
     name: Attach native executables to release
-    needs: native_images
+    needs: build_native_images
     runs-on: ubuntu-latest
     steps:
+      - name: Audit gh version
+        run: gh --version
     
       # when no artifact is specified, all artifacts are downloaded and expanded into CWD
       - name: Fetch executables
@@ -165,7 +192,22 @@ jobs:
       - name: Zip (windows)
         run: for dir in *windows*; do zip -r "${dir}.zip" "$dir"; done
         
+      - name: Upload release archives
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-archives
+          path: |
+            *.zip
+            *.tar.gz
+          if-no-files-found: error
+          retention-days: 1
+        
       - name: Upload
-        run: gh release upload --clobber --repo ${{ github.repository }} ${{ github.event.inputs.tag }} *.zip *.tar.gz
+        run: |
+         until gh release upload --clobber --repo ${{ github.repository }} ${{ github.event.inputs.tag }} *.zip *.tar.gz; do
+           echo "Attempt $((++attempts)) to upload release artifacts failed. Will retry in 20s"
+           sleep 20
+         done
+        timeout-minutes: 10
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
