--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -35,19 +35,22 @@ jobs:
         
       - name: Check for existing release
         id: check_release
-        run: gh release view --repo '${{ github.repository }}' '${{ github.event.inputs.tag }}'
-        continue-on-error: true
+        run: |
+          echo "::echo::on"
+          gh release view --repo '${{ github.repository }}' '${{ github.event.inputs.tag }}' \
+            && echo "::set-output name=already_exists::true" \
+            || echo "::set-output name=already_exists::false"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Checkout repo
-        if: steps.check_release.outcome != 'success'
+        if: steps.check_release.outputs.already_exists == 'false'
         uses: actions/checkout@v2
         with:
           ref: '${{ github.event.inputs.ref }}'
         
       - name: Create release
-        if: steps.check_release.outcome != 'success'
+        if: steps.check_release.outputs.already_exists == 'false'
         run: >
           gh release create
           '${{ github.event.inputs.tag }}'
