--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ ext {
     jacksonVersion = '2.13.1'
     micrometerVersion = '1.8.3'
 
-    logbackVersion = '1.2.10'
-    protoVersion = '[3.10.0,)!!3.19.4'
+    logbackVersion = '1.2.11'
+    protoVersion = '[3.10.0,4.0)!!3.19.4'
     guavaVersion = '[10.0,)!!31.0.1-jre'
     jsonPathVersion = '2.7.0'
     mockitoVersion = '4.3.1'
