--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext {
 
     logbackVersion = '1.2.11'
     protoVersion = '[3.10.0,4.0)!!3.19.4'
+    annotationApiVersion = '1.3.2'
     guavaVersion = '[10.0,)!!31.1-jre'
     jsonPathVersion = '2.7.0'
     mockitoVersion = '4.4.0'
