Add MacOS arm64 test server build target

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -7,23 +7,23 @@ on:
     inputs:
       tag:
         type: string
-        description: 'Release version tag (e.g. v1.2.3)'
+        description: "Release version tag (e.g. v1.2.3)"
         required: true
       ref:
         type: string
-        description: 'Git ref from which to release'
+        description: "Git ref from which to release"
         required: true
-        default: 'master'
+        default: "master"
       do_build_native_images:
         type: boolean
-        description: 'Native Test Server'
+        description: "Native Test Server"
         required: true
-        default: 'true'
+        default: "true"
       do_publish_jars:
         type: boolean
-        description: 'Publish Java Artifacts'
+        description: "Publish Java Artifacts"
         required: true
-        default: 'true'
+        default: "true"
 
 jobs:
   create_draft_release:
@@ -47,7 +47,7 @@ jobs:
         if: steps.check_release.outputs.already_exists == 'false'
         uses: actions/checkout@v3
         with:
-          ref: '${{ github.event.inputs.ref }}'
+          ref: "${{ github.event.inputs.ref }}"
 
       - name: Create release
         if: steps.check_release.outputs.already_exists == 'false'
@@ -61,7 +61,7 @@ jobs:
           --notes-file 'releases/${{ github.event.inputs.tag }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+
   publish_java_artifacts:
     name: Publish Java Artifacts
     if: github.event.inputs.do_publish_jars == 'true'
@@ -71,8 +71,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
-          ref: '${{ github.event.inputs.ref }}'
-          
+          ref: "${{ github.event.inputs.ref }}"
+
       # Our custom gradle version sniffing builds the maven release artifact
       # names out of the git tag ... but the repo isn't tagged (yet) so add a
       # tag to the _local_ clone just to get the right jar names. This tag
@@ -81,13 +81,13 @@ jobs:
       # release creates the tag.
       - name: Temporary tag
         run: git tag '${{ github.event.inputs.tag }}'
-        
+
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          
+          java-version: "11"
+          distribution: "temurin"
+
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
 
@@ -95,7 +95,7 @@ jobs:
         run: mkdir -p "$HOME/.gnupg" && echo -n "$KEY" | base64 -d > "$HOME/.gnupg/secring.gpg"
         env:
           KEY: ${{ secrets.JAR_SIGNING_KEY }}
-      
+
       # Prefer env variables here rather than inline ${{ secrets.FOO }} to
       # decrease the likelihood that secrets end up printed to stdout.
       - name: Set up secret gradle properties
@@ -113,10 +113,10 @@ jobs:
           KEY_ID: ${{ secrets.JAR_SIGNING_KEY_ID }}
           RH_USER: ${{ secrets.RH_USER }}
           RH_PASSWORD: ${{ secrets.RH_PASSWORD }}
-        
+
       - name: Publish
         run: ./gradlew publish
-         
+
   build_native_images:
     name: Build native test server
     needs: create_draft_release
@@ -133,30 +133,37 @@ jobs:
           - dist: windows-2019
             os_family: windows
             arch: amd64
+          - dist: [self-hosted, MacOS, arm64]
+            os_family: macOS
+            arch: arm64
+            run_wrapper: "arch -arm64 bash --noprofile --norc -eo pipefail {0}"
     runs-on: ${{ matrix.dist }}
+    defaults:
+      run:
+        shell: ${{ matrix.run_wrapper || 'bash --noprofile --norc -eo pipefail {0}' }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
-          ref: '${{ github.event.inputs.ref }}'
+          ref: "${{ github.event.inputs.ref }}"
 
       # See comment on temporary tag above. tldr: this is a local tag; never
       # gets pushed
       - name: Temporary tag
         run: git tag '${{ github.event.inputs.tag }}'
-        
+
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          
+          java-version: "11"
+          distribution: "temurin"
+
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
-        
+
       - name: Build native test server
         run: ./gradlew :temporal-test-server:build
-      
+
       # path ends in a wildcard because on windows the file ends in '.exe'
       # path excludes *.txt because native-image also writes a build manifest txt file
       - name: Upload executable to workflow
@@ -168,7 +175,7 @@ jobs:
             !temporal-test-server/build/graal/*.txt
           if-no-files-found: error
           retention-days: 1
-          
+
   attach_to_release:
     name: Attach native executables to release
     needs: build_native_images
@@ -180,21 +187,21 @@ jobs:
       # when no artifact is specified, all artifacts are downloaded and expanded into CWD
       - name: Fetch executables
         uses: actions/download-artifact@v2
-        
+
       # example: linux_amd64/ -> temporal-test-server_1.2.3_linux_amd64
-      # the name of the directory created becomes the basename of the archive (*.tar.gz or *.zip) and 
+      # the name of the directory created becomes the basename of the archive (*.tar.gz or *.zip) and
       # the root directory of the contents of the archive.
       - name: Rename dirs
         run: |
           version="$(sed 's/^v//'<<<'${{ github.event.inputs.tag }}')"
-          for dir in *; do mv "$dir" "temporal-test-server_${version}_${dir}"; done        
-      
+          for dir in *; do mv "$dir" "temporal-test-server_${version}_${dir}"; done
+
       - name: Tar (linux, macOS)
         run: for dir in *{linux,macOS}*; do tar cvzf "${dir}.tar.gz" "$dir"; done
-        
+
       - name: Zip (windows)
         run: for dir in *windows*; do zip -r "${dir}.zip" "$dir"; done
-        
+
       - name: Upload release archives
         uses: actions/upload-artifact@v2
         with:
@@ -207,10 +214,10 @@ jobs:
 
       - name: Upload
         run: |
-         until gh release upload --clobber --repo ${{ github.repository }} ${{ github.event.inputs.tag }} *.zip *.tar.gz; do
-           echo "Attempt $((++attempts)) to upload release artifacts failed. Will retry in 20s"
-           sleep 20
-         done
+          until gh release upload --clobber --repo ${{ github.repository }} ${{ github.event.inputs.tag }} *.zip *.tar.gz; do
+            echo "Attempt $((++attempts)) to upload release artifacts failed. Will retry in 20s"
+            sleep 20
+          done
         timeout-minutes: 10
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
