--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -39,8 +39,11 @@ subprojects {
         if (JavaVersion.current().isJava9Compatible()) {
             options.addBooleanOption('html5', true)
         }
-        //https://stackoverflow.com/questions/53732632/gradle-javadoc-search-redirects-to-undefined-url
-        options.addBooleanOption('-no-module-directories', true)
+        if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
+            //https://stackoverflow.com/questions/53732632/gradle-javadoc-search-redirects-to-undefined-url
+            //the flag is removed in java13: https://bugs.openjdk.java.net/browse/JDK-8215582
+            options.addBooleanOption('-no-module-directories', true)
+        }
     }
 
     // add a collection to track failedTests
