--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -48,6 +48,16 @@ services:
     volumes:
       - "../../:/temporal-java-client"
 
+  unit-test-test-service-jdk17:
+    build:
+      context: ../../
+      dockerfile: ./docker/buildkite/Dockerfile-JDK17
+    environment:
+      - "USER=unittest"
+      - "USE_DOCKER_SERVICE=false"
+    volumes:
+      - "../../:/temporal-java-client"
+
   fossa:
     build:
       context: ../../
