--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -1,10 +1,18 @@
+buildscript {
+    ext {
+        kotlinVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16) ? '1.5.32' : '1.4.32'}"
+    }
+}
+
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+//    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
 //    id 'org.jetbrains.kotlin.jvm' version '1.5.32'
 //    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
-
+    id 'org.jetbrains.kotlin.jvm' version "${kotlinVersion}"
     id 'org.jlleitschuh.gradle.ktlint' version '10.2.1'
 }
+
+apply plugin: 'org.jetbrains.kotlin.jvm'
 
 description = '''Temporal Workflow Java SDK Kotlin'''
 
