--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,17 @@ ext {
     jacksonVersion = '2.13.1'
     micrometerVersion = '1.8.4'
 
-    logbackVersion = '1.2.11'
     protoVersion = '[3.10.0,3.99)!!3.19.4'
     annotationApiVersion = '1.3.2'
     guavaVersion = '[10.0,)!!31.1-jre'
     jsonPathVersion = '2.7.0'
-    mockitoVersion = '4.4.0'
     tallyVersion = '[0.4.0,)!!0.11.1'
     gsonVersion = '[2.0,)!!2.9.0'
     slf4jVersion = '[1.4.0,)!!1.7.36'
+
+    logbackVersion = '1.2.11'
+    mockitoVersion = '4.4.0'
+    junitVersion = '4.13.2'
 }
 
 apply from: "$rootDir/gradle/versioning.gradle"
