--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     }
 
     testImplementation project(':temporal-testing')
-    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation "junit:junit:${junitVersion}"
 
     testRuntimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
 }
