--- a/temporal-sdk/build.gradle
+++ b/temporal-sdk/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     testImplementation "com.jayway.jsonpath:json-path:$jsonPathVersion"
 
     testImplementation project(':temporal-testing')
-    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation "junit:junit:${junitVersion}"
     testImplementation "org.mockito:mockito-core:${mockitoVersion}"
     testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
