--- a/gradle/errorprone.gradle
+++ b/gradle/errorprone.gradle
@@ -4,7 +4,11 @@ subprojects {
 
     dependencies {
         errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
-        errorprone('com.google.errorprone:error_prone_core:2.9.0')
+        if (JavaVersion.current().isJava11Compatible()) {
+            errorprone('com.google.errorprone:error_prone_core:2.11.0')
+        } else {
+            errorprone('com.google.errorprone:error_prone_core:2.10.0')
+        }
     }
 
     tasks.withType(JavaCompile).configureEach {
