--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,14 @@
+buildscript {
+    ext {
+        palantirGitVersionVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11) ? '0.15.0' : '0.13.0'}"
+    }
+}
+
 plugins {
     id 'com.github.sherter.google-java-format' version '0.9' apply false
     id 'net.ltgt.errorprone' version '2.0.2' apply false
     id 'org.cadixdev.licenser' version '0.6.1'
-    id 'com.palantir.git-version' version '0.13.0' apply false
+    id 'com.palantir.git-version' version "${palantirGitVersionVersion}" apply false
     id 'de.marcphilipp.nexus-publish' version '0.4.0' apply false
 }
 
@@ -14,7 +20,7 @@ ext {
     // grpcVersion = '[1.34.0,)!!1.44.1'
     // jacksonVersion = '[2.9.0,)!!2.13.1'
     // micrometerVersion = '[1.0.0,)!!1.8.3'
-    grpcVersion = '1.45.0'
+    grpcVersion = '1.45.1'
     jacksonVersion = '2.13.1'
     micrometerVersion = '1.8.4'
 
