--- a/docker/buildkite/Dockerfile-JDK18
+++ b/docker/buildkite/Dockerfile-JDK18
@@ -1,10 +1,7 @@
 FROM openjdk:18-slim
 
 # Git is needed in order to update the dls submodule
-RUN apt-get update && apt-get install -y wget protobuf-compiler git
-
-# Fossa to run license scans
-RUN wget -O- https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sh
+RUN apt-get update && apt-get install -y protobuf-compiler git
 
 RUN mkdir /temporal-java-client
 WORKDIR /temporal-java-client
