--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,44 +3,44 @@ steps:
     agents:
       queue: "default"
       docker: "*"
-    command: "./gradlew --no-daemon testClasses build -x test -x nativeImage -x checkLicenseMain -x checkLicenses -x googleJavaFormat -x verifyGoogleJavaFormat"
+    command: "./gradlew --no-daemon testClasses build -x test -x nativeImage -x checkLicenseMain -x checkLicenses -x spotlessCheck -x spotlessApply"
     timeout_in_minutes: 15
     plugins:
       - docker-compose#v3.8.0:
-          run: unit-test-test-service-jdk18
+          run: jdk18
           config: docker/buildkite/docker-compose.yaml
 
   - label: ":java: Unit test with in-memory test service"
     agents:
       queue: "default"
       docker: "*"
-    command: "./gradlew --no-daemon test -x checkLicenseMain -x checkLicenses -x googleJavaFormat -x verifyGoogleJavaFormat"
+    command: "./gradlew --no-daemon test -x checkLicenseMain -x checkLicenses -x spotlessCheck -x spotlessApply"
     timeout_in_minutes: 15
     plugins:
       - docker-compose#v3.8.0:
-          run: unit-test-test-service
+          run: unit-test-test-service-jdk8
           config: docker/buildkite/docker-compose.yaml
 
   - label: ":docker: Unit test with docker service"
     agents:
       queue: "default"
       docker: "*"
-    command: "./gradlew --no-daemon test -x checkLicenseMain -x checkLicenses -x googleJavaFormat -x verifyGoogleJavaFormat"
+    command: "./gradlew --no-daemon test -x checkLicenseMain -x checkLicenses -x spotlessCheck -x spotlessApply"
     timeout_in_minutes: 15
     plugins:
       - docker-compose#v3.8.0:
-          run: unit-test-docker
+          run: unit-test-docker-jdk8
           config: docker/buildkite/docker-compose.yaml
 
   - label: ":copyright: Copyright and code format"
     agents:
       queue: "default"
       docker: "*"
-    command: "docker/buildkite/copyright-and-code-format.sh"
+    command: "./gradlew --no-daemon checkLicenseMain checkLicenses spotlessCheck"
     timeout_in_minutes: 15
     plugins:
       - docker-compose#v3.8.0:
-          run: unit-test-test-service-jdk18
+          run: jdk11
           config: docker/buildkite/docker-compose.yaml
 
   - wait
