--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,17 @@ buildscript {
 }
 
 plugins {
-    id 'com.github.sherter.google-java-format' version '0.9' apply false
     id 'net.ltgt.errorprone' version '2.0.2' apply false
     id 'org.cadixdev.licenser' version '0.6.1'
     id 'com.palantir.git-version' version "${palantirGitVersionVersion}" apply false
     id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+    id 'com.diffplug.spotless' version '6.4.2' apply false
+}
+
+subprojects {
+    repositories {
+        mavenCentral()
+    }
 }
 
 ext {
@@ -39,6 +45,7 @@ ext {
 
 apply from: "$rootDir/gradle/versioning.gradle"
 apply from: "$rootDir/gradle/java.gradle"
+apply from: "$rootDir/gradle/google-java-format.gradle"
 apply from: "$rootDir/gradle/errorprone.gradle"
 apply from: "$rootDir/gradle/licensing.gradle"
 apply from: "$rootDir/gradle/publishing.gradle"
