--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -27,10 +27,10 @@ services:
     volumes:
       - ./dynamicconfig:/etc/temporal/config/dynamicconfig
 
-  unit-test-docker:
+  unit-test-docker-jdk8:
     build:
       context: ../../
-      dockerfile: ./docker/buildkite/Dockerfile
+      dockerfile: ./docker/buildkite/Dockerfile-JDK8
     environment:
       - "USER=unittest"
       - "TEMPORAL_SERVICE_ADDRESS=temporal:7233"
@@ -40,22 +40,30 @@ services:
     volumes:
       - "../../:/temporal-java-client"
 
-  unit-test-test-service:
+  unit-test-test-service-jdk8:
     build:
       context: ../../
-      dockerfile: ./docker/buildkite/Dockerfile
+      dockerfile: ./docker/buildkite/Dockerfile-JDK8
     environment:
       - "USER=unittest"
       - "USE_DOCKER_SERVICE=false"
     volumes:
       - "../../:/temporal-java-client"
 
-  unit-test-test-service-jdk18:
+  jdk11:
+    build:
+      context: ../../
+      dockerfile: ./docker/buildkite/Dockerfile-JDK11
+    environment:
+      - "USER=unittest"
+    volumes:
+      - "../../:/temporal-java-client"
+
+  jdk18:
     build:
       context: ../../
       dockerfile: ./docker/buildkite/Dockerfile-JDK18
     environment:
       - "USER=unittest"
-      - "USE_DOCKER_SERVICE=false"
     volumes:
       - "../../:/temporal-java-client"
