Migrated from deprecated nexus publishing plugin

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -115,7 +115,7 @@ jobs:
           RH_PASSWORD: ${{ secrets.RH_PASSWORD }}
         
       - name: Publish
-        run: ./gradlew publish
+        run: ./gradlew publishToSonatype
          
   build_native_images:
     name: Build native test server
