--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id 'net.ltgt.errorprone' version '2.0.2' apply false
     id 'org.cadixdev.licenser' version '0.6.1'
     id 'com.palantir.git-version' version "${palantirGitVersionVersion}" apply false
-    id 'de.marcphilipp.nexus-publish' version '0.4.0' apply false
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
 ext {
