--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         palantirGitVersionVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11) ? '0.15.0' : '0.13.0'}"
+        kotlinVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16) ? '1.5.32' : '1.4.32'}"
     }
 }
 
@@ -10,6 +11,12 @@ plugins {
     id 'com.palantir.git-version' version "${palantirGitVersionVersion}" apply false
     id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
     id 'com.diffplug.spotless' version '6.9.0' apply false
+    id 'com.github.nbaztec.coveralls-jacoco' version "1.2.14" apply false
+
+    //    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+    //    id 'org.jetbrains.kotlin.jvm' version '1.5.32'
+    //    id 'org.jetbrains.kotlin.jvm' version '1.6.20'
+    id 'org.jetbrains.kotlin.jvm' version "${kotlinVersion}" apply false
     id 'base'
 }
 
@@ -50,6 +57,6 @@ apply from: "$rootDir/gradle/errorprone.gradle"
 apply from: "$rootDir/gradle/licensing.gradle"
 apply from: "$rootDir/gradle/publishing.gradle"
 apply from: "$rootDir/gradle/dependencyManagement.gradle"
-if (project.project.hasProperty("jacoco")) {
+if (project.hasProperty("jacoco")) {
     apply from: "$rootDir/gradle/jacoco.gradle"
 }
