--- a/temporal-test-server/build.gradle
+++ b/temporal-test-server/build.gradle
@@ -1,7 +1,14 @@
+buildscript {
+    ext {
+        // 0.11.0 and later are build on JDK 11 bytecode version
+        graalVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11) ? '0.12.0' : '0.10.0'}"
+    }
+}
+
 plugins {
     id 'application'
-    id 'com.palantir.graal' version '0.10.0'
-    id 'com.palantir.docker' version '0.33.0'
+    id 'com.palantir.graal' version "${graalVersion}"
+    id 'com.palantir.docker' version '0.34.0'
     id 'com.google.protobuf' version '0.8.18'
 }
 
