Add initial Spring Boot implementation

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,5 @@ include 'temporal-testing'
 include 'temporal-test-server'
 include 'temporal-opentracing'
 include 'temporal-kotlin'
+include 'temporal-spring-boot-autoconfigure-alpha'
+include 'temporal-spring-boot-starter-alpha'
