--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -13,8 +13,8 @@ dependencies {
     api "io.grpc:grpc-stub" //Part of WorkflowServiceStubs API
     api "io.grpc:grpc-netty-shaded" //Part of WorkflowServiceStubs API, specifically SslContext
     api "com.google.protobuf:protobuf-java-util:$protoVersion" //proto request and response objects are a part of this module's API
-    if (!JavaVersion.current().isJava8()) {
-        //needed for the generated grpc stubs
+    if (JavaVersion.current().isJava9Compatible()) {
+        //needed for the generated grpc stubs and is not a part of JDK since java 9
         implementation "javax.annotation:javax.annotation-api:$annotationApiVersion"
     }
 
