--- a/temporal-test-server/build.gradle
+++ b/temporal-test-server/build.gradle
@@ -22,8 +22,8 @@ dependencies {
     api project(':temporal-sdk')
     implementation("io.grpc:grpc-core")
     implementation("io.grpc:grpc-services")
-    if (!JavaVersion.current().isJava8()) {
-        //needed for the generated grpc stubs
+    if (JavaVersion.current().isJava9Compatible()) {
+        //needed for the generated grpc stubs and is not a part of JDK since java 9
         implementation "javax.annotation:javax.annotation-api:$annotationApiVersion"
     }
 
