--- a/temporal-spring-boot-autoconfigure-alpha/src/test/resources/application-custom-namespace.yml
+++ b/temporal-spring-boot-autoconfigure-alpha/src/test/resources/application-custom-namespace.yml
@@ -19,10 +19,11 @@
 #
 
 spring.temporal:
+  serviceStubs:
+    target: local
+  namespace: custom
   startWorkers: false
   testServer:
     enabled: false
-  client:
-    target: local
-    namespace: custom
+
 
