--- a/temporal-spring-boot-autoconfigure-alpha/src/test/resources/application.yml
+++ b/temporal-spring-boot-autoconfigure-alpha/src/test/resources/application.yml
@@ -19,10 +19,10 @@
 #
 
 spring.temporal:
+  serviceStubs:
+    target: local
   testServer:
     enabled: true
-  client:
-    target: inprocess
   workers:
     - taskQueue: UnitTest
 
