Remote Data Encoder and PayloadCodec
Issue #1044

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include 'temporal-opentracing'
 include 'temporal-kotlin'
 include 'temporal-spring-boot-autoconfigure-alpha'
 include 'temporal-spring-boot-starter-alpha'
+include 'temporal-remote-data-encoder'
