Upgrade Gradle, deps and cleanup duplicated outdated license files

--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 }
 
 task registerNamespace(type: JavaExec) {
-    main = 'io.temporal.internal.docker.RegisterTestNamespace'
+    getMainClass().set('io.temporal.internal.docker.RegisterTestNamespace')
     classpath = sourceSets.test.runtimeClasspath
 }
 
