--- a/temporal-sdk/build.gradle
+++ b/temporal-sdk/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 }
 
 task registerNamespace(type: JavaExec) {
-    main = 'io.temporal.internal.docker.RegisterTestNamespace'
+    getMainClass().set('io.temporal.internal.docker.RegisterTestNamespace')
     classpath = sourceSets.test.runtimeClasspath
 }
 
