Upgrade Graal options to fix build warning messages and improve build speed

--- a/temporal-test-server/src/main/resources/META-INF/native-image/io.temporal/temporal-test-server/native-image.properties
+++ b/temporal-test-server/src/main/resources/META-INF/native-image/io.temporal/temporal-test-server/native-image.properties
@@ -22,6 +22,7 @@ Args = --initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder \
   --initialize-at-build-time=org.slf4j.LoggerFactory \
   --initialize-at-run-time=io.grpc.netty.shaded.io.netty.channel.epoll \
   --initialize-at-run-time=io.grpc.netty.shaded.io.netty.channel.unix \
+  --initialize-at-run-time=io.grpc.netty.shaded.io.netty.util.internal.logging.Slf4JLoggerFactory$NopInstanceHolder \
   --initialize-at-run-time=io.grpc.netty.shaded.io.netty.util.internal.logging.Log4JLogger \
   --initialize-at-run-time=io.grpc.netty.shaded.io.netty.internal.tcnative \
   --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl \
